--- a/Automatic Controls.tex
+++ b/Automatic Controls.tex
@@ -2,12 +2,12 @@
 
 \input{setup.tex}
 
-\usepackage[osf,sc]{mathpazo}
+%\usepackage[osf,sc]{mathpazo}
 %\usepackage[scaled=0.90]{helvet}
 %\usepackage[scaled=0.85]{beramono}
 
-\usepackage[defaultfam,light,tabular,lining]{montserrat}
-\renewcommand*\oldstylenums[1]{{\fontfamily{Montserrat-TOsF}\selectfont #1}}
+%\usepackage[defaultfam,light,tabular,lining]{montserrat}
+%\renewcommand*\oldstylenums[1]{{\fontfamily{Montserrat-TOsF}\selectfont #1}}
 
 
 \begin{document}
@@ -50,7 +50,7 @@
 	
 	
 	\mainmatter
-	
+	\input{Chapters/intro}
 	
 	
 	\appendix
