--- a/Automatic Controls.tex
+++ b/Automatic Controls.tex
@@ -2,9 +2,9 @@
 
 \input{setup.tex}
 
-%\usepackage[osf,sc]{mathpazo}
-%\usepackage[scaled=0.90]{helvet}
-%\usepackage[scaled=0.85]{beramono}
+\usepackage[osf,sc]{mathpazo}
+\usepackage[scaled=0.90]{helvet}
+\usepackage[scaled=0.85]{beramono}
 
 %\usepackage[defaultfam,light,tabular,lining]{montserrat}
 %\renewcommand*\oldstylenums[1]{{\fontfamily{Montserrat-TOsF}\selectfont #1}}
