--- a/setup.tex
+++ b/setup.tex
@@ -55,7 +55,7 @@
 \newcommand{\vet}[1]{\begin{pmatrix} #1 \end{pmatrix}}
 \newcommand{\mat}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\tikzfigure}[1]{\tikzfig{Images/#1}}
-
+\newcommand{\Gs}{\hat \G(s)}
 
 \newcommand{\de}[1]{\textbf{\textcolor{NavyBlue}{#1}}}
 \newcommand{\bfcolor}[1]{\renewcommand*{\textbf}[1]{{\bfseries {\color{#1}##1}}}}
