--- a/setup.tex
+++ b/setup.tex
@@ -52,6 +52,7 @@
 \newcommand{\D}{\mathcal{D}}
 \newcommand{\G}{\mathcal{G}}
 \newcommand{\I}{\mathcal{I}}
+\newcommand{\J}{\mathcal{J}}
 \newcommand{\vet}[1]{\begin{pmatrix} #1 \end{pmatrix}}
 \newcommand{\mat}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\tikzfigure}[1]{\tikzfig{Images/#1}}
