--- a/setup.tex
+++ b/setup.tex
@@ -57,6 +57,7 @@
 \newcommand{\mat}[1]{\begin{bmatrix} #1 \end{bmatrix}}
 \newcommand{\tikzfigure}[1]{\tikzfig{Images/#1}}
 \newcommand{\Gs}{\hat \G(s)}
+\newcommand{\lyap}{\mathcal V}
 
 \newcommand{\de}[1]{\textbf{\textcolor{NavyBlue}{#1}}}
 \newcommand{\bfcolor}[1]{\renewcommand*{\textbf}[1]{{\bfseries {\color{#1}##1}}}}
