--- a/setup.tex
+++ b/setup.tex
@@ -58,6 +58,9 @@
 \newcommand{\tikzfigure}[1]{\tikzfig{Images/#1}}
 \newcommand{\Gs}{\hat \G(s)}
 \newcommand{\lyap}{\mathcal V}
+\newcommand{\eq}{^{eq}}
+\newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}}
+\newcommand{\pdl}[2]{\partial #1/\partial #2}
 
 \newcommand{\de}[1]{\textbf{\textcolor{NavyBlue}{#1}}}
 \newcommand{\bfcolor}[1]{\renewcommand*{\textbf}[1]{{\bfseries {\color{#1}##1}}}}
