--- a/setup.tex
+++ b/setup.tex
@@ -61,6 +61,9 @@
 \newcommand{\eq}{^{eq}}
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}}
 \newcommand{\pdl}[2]{\partial #1/\partial #2}
+\renewcommand{\H}{\mathcal H}
+\newcommand{\control}{\mathscr C}
+\newcommand{\reach}{\mathscr R}
 
 \newcommand{\de}[1]{\textbf{\textcolor{NavyBlue}{#1}}}
 \newcommand{\bfcolor}[1]{\renewcommand*{\textbf}[1]{{\bfseries {\color{#1}##1}}}}
