--- a/Automatic Controls.tex
+++ b/Automatic Controls.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt,letterpaper,oneside,openright]{book}
 
-\input{setup.tex}
+%\input{setup.tex}
+\input{setup2.tex}
 
 \usepackage[osf,sc]{mathpazo}
 \usepackage[scaled=0.90]{helvet}
@@ -50,9 +51,17 @@
 	
 	
 	\mainmatter
-	\input{Chapters/intro}
-	\input{Chapters/NLS}
+%	\input{Chapters/intro}
+%	\input{Chapters/NLS}
+%	\input{Chapters/LMI}
 	
+	\input{Chapters2/dynsys}
+	\input{Chapters2/solutions}
+	\input{Chapters2/lyapunov}
+	\input{Chapters2/control-reachability}
+	\input{Chapters2/observability}
+	\input{Chapters2/kalman}
+	\input{Chapters2/hybrid}
 	
 	\appendix
 	
